# Controle-Gastos

./: Cargo.toml
src/: main.rs  models.rs
src/controller/: form.rs  mod.rs  table.rs
src/model/: custo.rs  mod.rs
templates/: 404.html  blank.html  charts.html  forgot-password.html  form.html.tera  login.html  package-lock.json  package.json  register.html  tables.html.tera  template.html.tera
