[package]
name = "serviceWeb"
version = "0.1.0"
authors = ["lminozzo <laerciominozzo@hotmail.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
time = "0.1"


[dependencies.rocket_contrib]
version = "0.3.17"
default-features = false
features = ["handlebars_templates", "tera_templates"]

